@@ -4,6 +4,9 @@ Changelog
 1.20 - Unreleased
 -----------------
 
+* Git: Added ``pushurl`` option
+  [iElectric]
+
 * Refactored thread locking.
   [shywolf9982]
 
